<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>easy_gpio</name>
  <version>0.0.1</version>
  <description>Simple lgpio client node for ROS 2</description>
  <maintainer email="mhyhre@gmail.com">Andrey Tulyakov</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>easy_gpio_interfaces</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
